[FIX][UI] Overflow property on div.card broke CSS menu dropdown display.

--- a/themes/sketchy/css/sketchy.css
+++ b/themes/sketchy/css/sketchy.css
@@ -6136,8 +6136,7 @@ textarea, textarea.form-control, select, select.form-control {
     color: #dc3545; }
 
 .card {
-  border-radius: 5px 5px 5px 5px/25px 25px 25px 5px;
-  overflow: hidden; }
+  border-radius: 5px 5px 5px 5px/25px 25px 25px 5px; }
   .card-outline-primary, .card-outline-success, .card-outline-info, .card-outline-warning, .card-outline-danger {
     border-width: 2px; }
   .card-header {
