--- a/themes/sketchy/scss/_bootswatch.scss
+++ b/themes/sketchy/scss/_bootswatch.scss
@@ -332,7 +332,7 @@ select.form-control {
 
 .card {
   border-radius: 5px 5px 5px 5px/25px 25px 25px 5px;
-  overflow: hidden;
+//  overflow: hidden;
 
   &-outline {
     &-primary,
